Upgrade docusaurus v3 (#1423)
### Summary

1. Upgrade the docusaurus framework: 2.4.1->3.6.3 and upgrade related
libraries and plugins.
2. Fix some problems caused by framework upgrade.

---------

Co-authored-by: smiletan <intelligentfu@163.com>
Co-authored-by: KassieZ <139741991+KassieZ@users.noreply.github.com>
Co-authored-by: Jeffrey <color.dove@gmail.com>
Co-authored-by: liyang <liyang@selectdb.com>