@@ -107,38 +107,14 @@ spec:
 #### 第 1 步：配置并部署 ConfigMap  
 以下示例定义了名为 `fe-conf` 的 ConfigMap，该配置可供 Doris FE 使用：
 ```yaml
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: fe-conf
-  labels:
-    app.kubernetes.io/component: fe
-data:
-  fe.conf: |
-    CUR_DATE=`date +%Y%m%d-%H%M%S`
-
-    # the output dir of stderr and stdout
-    LOG_DIR = ${DORIS_HOME}/log
-
-    JAVA_OPTS="-Djavax.security.auth.useSubjectCredsOnly=false -Xss4m -Xmx8192m -XX:+UseMembar -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=7 -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSClassUnloadingEnabled -XX:-CMSParallelRemarkEnabled -XX:CMSInitiatingOccupancyFraction=80 -XX:SoftRefLRUPolicyMSPerMB=0 -Xloggc:$DORIS_HOME/log/fe.gc.log.$CUR_DATE"
-
-    # For jdk 9+, this JAVA_OPTS will be used as default JVM options
-    JAVA_OPTS_FOR_JDK_9="-Djavax.security.auth.useSubjectCredsOnly=false -Xss4m -Xmx8192m -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=7 -XX:+CMSClassUnloadingEnabled -XX:-CMSParallelRemarkEnabled -XX:CMSInitiatingOccupancyFraction=80 -XX:SoftRefLRUPolicyMSPerMB=0 -Xlog:gc*:$DORIS_HOME/log/fe.gc.log.$CUR_DATE:time"
-
-    # INFO, WARN, ERROR, FATAL
-    sys_log_level = INFO
-
-    # NORMAL, BRIEF, ASYNC
-    sys_log_mode = NORMAL
-
-    # Default dirs to put jdbc drivers,default value is ${DORIS_HOME}/jdbc_drivers
-    # jdbc_drivers_dir = ${DORIS_HOME}/jdbc_drivers
-
-    http_port = 8030
-    rpc_port = 9020
-    query_port = 9030
-    edit_log_port = 9010
-    enable_fqdn_mode = true
+spec:
+  beSpec:
+    requests:
+      cpu: 16
+      memory: 32Gi
+    limits:
+      cpu: 16
+      memory: 32Gi
 ```
 使用 ConfigMap 挂载 FE 启动配置信息时，配置信息对应的 key 必须为 `fe.conf` 。完成配置文件后，通过如下命令部署到 `DorisCluster` 资源将要部署的命名空间。
 ```shell
@@ -232,6 +208,7 @@ spec:
     - configMapName: test-fe2
       mountPath: /etc/fe/config2
 ```
+上述配置中, ${your_storageclass} 表示希望使用的 [StorageClass](https://kubernetes.io/docs/concepts/storage/storage-classes/) 名称, ${storageSize} 表示希望使用的存储大小，${storageSize} 的格式遵循 K8s 的 [quantity 表达方式](https://kubernetes.io/docs/reference/kubernetes-api/common-definitions/quantity/), 比如： 100Gi 。请在使用时按需替换。
 
 **BE 挂载多 ConfigMap**  
 以下示例展示将 test-be1 ， test-be2 的 ConfigMap 分别挂载到 BE 容器 `/etc/be/config1/` 和 `/etc/be/config2` 目录下：
@@ -244,6 +221,7 @@ spec:
     - configMapName: test-be2
       mountPath: /etc/be/config2
 ```
+上述配置中, ${your_storageclass} 表示希望使用的 [StorageClass](https://kubernetes.io/docs/concepts/storage/storage-classes/) 名称, ${storageSize} 表示希望使用的存储大小，${storageSize} 的格式遵循 K8s 的 [quantity 表达方式](https://kubernetes.io/docs/reference/kubernetes-api/common-definitions/quantity/), 比如： 100Gi 。请在使用时按需替换。
 
 ## 配置持久化存储
 在 Doris 集群中，FE、BE 组件需要将数据持久化。Kubernetes 提供了 [Persistent Volume](https://kubernetes.io/docs/concepts/storage/persistent-volumes/) 机制，将数据持久化到物理存储中。在 Kubernetes 环境中，Doris Operator 使用 [StorageClass](https://kubernetes.io/docs/concepts/storage/storage-classes/) 自动创建 PersistentVolumeClaim 关联合适的 PersistentVolume 。
@@ -263,7 +241,7 @@ spec:
         # when use specific storageclass, the storageClassName should reConfig, example as annotation.
         storageClassName: ${your_storageclass}
         accessModes:
-        - ReadWriteOnce
+          - ReadWriteOnce
         resources:
           # notice: if the storage size less 5G, fe will not start normal.
           requests:
@@ -283,7 +261,7 @@ spec:
         # when use specific storageclass, the storageClassName should reConfig, example as annotation.
         storageClassName: ${your_storageclass}
         accessModes:
-        - ReadWriteOnce
+          - ReadWriteOnce
         resources:
           # notice: if the storage size less 5G, fe will not start normal.
           requests:
