@@ -107,38 +107,20 @@ Doris uses ConfigMap to decouple configuration files from services, in Kubernete
 #### Step 1:  Create and deploy the FE ConfigMap
 The following example defines a ConfigMap named fe-conf for use with Doris FE:
 ```yaml
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: fe-conf
-  labels:
-    app.kubernetes.io/component: fe
-data:
-  fe.conf: |
-    CUR_DATE=`date +%Y%m%d-%H%M%S`
-
-    # the output dir of stderr and stdout
-    LOG_DIR = ${DORIS_HOME}/log
-
-    JAVA_OPTS="-Djavax.security.auth.useSubjectCredsOnly=false -Xss4m -Xmx8192m -XX:+UseMembar -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=7 -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSClassUnloadingEnabled -XX:-CMSParallelRemarkEnabled -XX:CMSInitiatingOccupancyFraction=80 -XX:SoftRefLRUPolicyMSPerMB=0 -Xloggc:$DORIS_HOME/log/fe.gc.log.$CUR_DATE"
-
-    # For jdk 9+, this JAVA_OPTS will be used as default JVM options
-    JAVA_OPTS_FOR_JDK_9="-Djavax.security.auth.useSubjectCredsOnly=false -Xss4m -Xmx8192m -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=7 -XX:+CMSClassUnloadingEnabled -XX:-CMSParallelRemarkEnabled -XX:CMSInitiatingOccupancyFraction=80 -XX:SoftRefLRUPolicyMSPerMB=0 -Xlog:gc*:$DORIS_HOME/log/fe.gc.log.$CUR_DATE:time"
-
-    # INFO, WARN, ERROR, FATAL
-    sys_log_level = INFO
-
-    # NORMAL, BRIEF, ASYNC
-    sys_log_mode = NORMAL
-
-    # Default dirs to put jdbc drivers,default value is ${DORIS_HOME}/jdbc_drivers
-    # jdbc_drivers_dir = ${DORIS_HOME}/jdbc_drivers
-
-    http_port = 8030
-    rpc_port = 9020
-    query_port = 9030
-    edit_log_port = 9010
-    enable_fqdn_mode = true
+spec:
+  feSpec:
+    persistentVolumes:
+    - mountPath: /opt/apache-doris/fe/doris-meta
+      name: meta
+      persistentVolumeClaimSpec:
+        # when use specific storageclass, the storageClassName should reConfig, example as annotation.
+        storageClassName: ${your_storageclass}
+        accessModes:
+        - ReadWriteOnce
+        resources:
+          # notice: if the storage size less 5G, fe will not start normal.
+          requests:
+            storage: ${storageSize}
 ```
 When using the ConfigMap to mount FE startup configuration, the key corresponding to the configuration must be `fe.conf`. Write the ConfigMap to a file and deploy it to the namespace where the DorisCluster resource is deployed, using the following command:
 ```shell
